# Teste-API-Robot-Framework

./: .gitignore  README  README.md  pyproject.toml
Resources/asserts/: assert_get_orders.robot  assert_post_orders.robot
Resources/requests/: get_order.robot  post_order.robot
Resources/requests/json/: items_list.json  post_order.json
Resources/session/: order_session.robot
Resources/test_data/: test_data.yml
log/: log.html  output.xml  report.html
suite/: Criação de Pedido de Venda.robot  Pesquisa de Pedido de Venda.robot
