[tool.poetry]
name = "robot-api"
version = "0.1.0"
description = "Testando API com Robot Framework"
authors = ["Douglas Ferreira <douglas.fsilva@stone.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
robotframework = "^7.0"
robotframework-requests = "^0.9.6"
robotframework-faker = "^5.0.0"
robotframework-jsonlibrary = "^0.5"
robotframework-debuglibrary = "^2.5.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
